Ajuste na documentação do endpoint "/emprestimo/simular"
